영문 메인페이지 링크 경로 수정 (../main_en/MN01.html → ../en/MN01.html)

--- a/20250810/html/main/MN01.html
+++ b/20250810/html/main/MN01.html
@@ -68,7 +68,7 @@
               <a href="#" class="main-header__lang-link">한국어 (KR)</a>
             </li>
             <li class="main-header__lang-item">
-              <a href="../main_en/MN01.html" class="main-header__lang-link">English (EN)</a>
+              <a href="../en/MN01.html" class="main-header__lang-link">English (EN)</a>
             </li>
           </ul>
         </div>
