Update page layouts: Remove sub-titles between tabs and visual sections, fix HV04 image path, and standardize page structures

--- a/20250810/html/sub/CO03.html
+++ b/20250810/html/sub/CO03.html
@@ -159,17 +159,7 @@
         </div>
       </section>
 
-      <section class="page-title">
-        <div class="page-title__inner">
-          <h1 class="page-title__title">비전</h1>
-          <p class="page-title__text">
-            (주)넥서스가스는 지속 가능한 에너지 산업의 미래를 위한 <br />
-            기반을 다지는 인프라 전문 기업으로서,신재생 에너지 전환과 <br />
-            안전한 가스 설비 시스템 구축을 통해 친환경 에너지 인프라 <br />
-            생태계를 이끌어갑니다.
-          </p>
-        </div>
-      </section>
+
 
       <!-- hero -->
       <section class="hero-container">
@@ -182,7 +172,7 @@
             <div class="sub-hero__dimmed"></div>
             <div class="sub-hero__sections">
               <div class="sub-hero__section hero-text">
-                <div class="hero-text__title hero-step">조직도비전</div>
+                                 <div class="hero-text__title hero-step">비전</div>
                 <div class="hero-text__detail">
                   <p class="hero-text__main hero-step">
                     (주)넥서스가스는 지속 가능한 에너지 산업의 미래를 위한 <br />
