--- a/20250810/html/sub/CO07.html
+++ b/20250810/html/sub/CO07.html
@@ -202,7 +202,7 @@
                 </thead>
                 <tbody class="line-table__body">
                   <tr>
-                    <td class="line-table__body-td">경상북도 경주시 광양읍 광양로 112 (광양읍, 광양리)</td>
+                    <td class="line-table__body-td">전라남도 광양시 광양읍 익신산단3길 40</td>
                     <td class="line-table__body-td">(061)795-7495</td>
                     <td class="line-table__body-td">(061)795-7498</td>
                   </tr>
@@ -264,7 +264,7 @@
           <div class="main-footer__contact-row">
             <div class="main-footer__contact-column">
               <dt>주소</dt>
-              <dd>전라남도 광양시 희망길 12-14, 2층 (제철회관)</dd>
+              <dd>전라남도 광양시 광양읍 익신산단3길 40</dd>
             </div>
           </div>
           <div class="main-footer__contact-row">
