--- a/20250810/html/sub/MK01.html
+++ b/20250810/html/sub/MK01.html
@@ -25,22 +25,22 @@
     <div class="main-header__gnb gnb">
       <ul class="gnb__list" role="menubar">
         <li class="gnb__item">
-          <a href="#" class="gnb__link" data-menu="nexus">NEXUSGAS</a>
+          <a href="MK02.html" class="gnb__link" data-menu="nexus">NEXUSGAS</a>
         </li>
         <li class="gnb__item">
           <a href="BU00.html" class="gnb__link" data-menu="business">사업분야</a>
         </li>
         <li class="gnb__item">
-          <a href="#" class="gnb__link" data-menu="solution">솔루션분야</a>
+          <a href="MK02.html" class="gnb__link" data-menu="solution">솔루션분야</a>
         </li>
         <li class="gnb__item">
-          <a href="#" class="gnb__link" data-menu="pr">홍보</a>
+          <a href="MK02.html" class="gnb__link" data-menu="pr">홍보</a>
         </li>
         <li class="gnb__item">
-          <a href="#" class="gnb__link" data-menu="esg">지속가능경영</a>
+          <a href="MK02.html" class="gnb__link" data-menu="esg">지속가능경영</a>
         </li>
         <li class="gnb__item">
-          <a href="#" class="gnb__link" data-menu="recruit">채용</a>
+          <a href="MK02.html" class="gnb__link" data-menu="recruit">채용</a>
         </li>
       </ul>
     </div>
@@ -65,7 +65,7 @@
         <div class="main-header__lang-dropdown">
           <ul class="main-header__lang-list">
             <li class="main-header__lang-item">
-              <a href="#" class="main-header__lang-link">한국어 (KR)</a>
+              <a href="MK02.html" class="main-header__lang-link">한국어 (KR)</a>
             </li>
             <li class="main-header__lang-item">
               <a href="../en/MK01.html" class="main-header__lang-link">English (EN)</a>
@@ -159,7 +159,7 @@
           <div class="swiper swiper--news-swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
-                <a href="#" class="slide-item slide-item--left">
+                <a href="MK02.html" class="slide-item slide-item--left">
                   <div class="slide-item__img">
                     <img src="../../assets/img/sub/slide-img-mk01.webp" alt="" />
                   </div>
@@ -175,7 +175,7 @@
                 </button>
 
                 <div class="slide-item slide-item--right">
-                  <a href="#" class="slide-item__box">
+                  <a href="MK02.html" class="slide-item__box">
                     <span class="slide-item__badge news-badge">NEWS</span>
                     <div class="slide-item__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                     <div class="slide-item__desc">
@@ -184,7 +184,7 @@
                     </div>
                     <div class="slide-item__date">2025.05.20</div>
                   </button>
-                  <a href="#" class="slide-item__box">
+                  <a href="MK02.html" class="slide-item__box">
                     <span class="slide-item__badge news-badge">NEWS</span>
                     <div class="slide-item__title">탄소중립과 지속 가능한 에너지 솔루션의 필요성</div>
                     <div class="slide-item__desc">
@@ -196,7 +196,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <a href="#" class="slide-item slide-item--left">
+                <a href="MK02.html" class="slide-item slide-item--left">
                   <div class="slide-item__img">
                     <img src="../../assets/img/sub/slide-img-mk01.webp" alt="" />
                   </div>
@@ -212,7 +212,7 @@
                 </button>
 
                 <div class="slide-item slide-item--right">
-                  <a href="#" class="slide-item__box">
+                  <a href="MK02.html" class="slide-item__box">
                     <span class="slide-item__badge news-badge">NEWS</span>
                     <div class="slide-item__title">2지속 가능한 미래를 위한 에너지 혁신의 길</div>
                     <div class="slide-item__desc">
@@ -221,7 +221,7 @@
                     </div>
                     <div class="slide-item__date">2025.05.20</div>
                   </button>
-                  <a href="#" class="slide-item__box">
+                  <a href="MK02.html" class="slide-item__box">
                     <span class="slide-item__badge news-badge">NEWS</span>
                     <div class="slide-item__title">탄소중립과 지속 가능한 에너지 솔루션의 필요성</div>
                     <div class="slide-item__desc">
@@ -233,7 +233,7 @@
                 </div>
               </div>
               <div class="swiper-slide">
-                <a href="#" class="slide-item slide-item--left">
+                <a href="MK02.html" class="slide-item slide-item--left">
                   <div class="slide-item__img">
                     <img src="../../assets/img/sub/slide-img-mk01.webp" alt="" />
                   </div>
@@ -249,7 +249,7 @@
                 </button>
 
                 <div class="slide-item slide-item--right">
-                  <a href="#" class="slide-item__box">
+                  <a href="MK02.html" class="slide-item__box">
                     <span class="slide-item__badge news-badge">NEWS</span>
                     <div class="slide-item__title">3지속 가능한 미래를 위한 에너지 혁신의 길</div>
                     <div class="slide-item__desc">
@@ -258,7 +258,7 @@
                     </div>
                     <div class="slide-item__date">2025.05.20</div>
                   </button>
-                  <a href="#" class="slide-item__box">
+                  <a href="MK02.html" class="slide-item__box">
                     <span class="slide-item__badge news-badge">NEWS</span>
                     <div class="slide-item__title">탄소중립과 지속 가능한 에너지 솔루션의 필요성</div>
                     <div class="slide-item__desc">
@@ -388,7 +388,7 @@
             <div class="pagenation__wrap">
               <ul class="pagenation__item">
                 <li class="pagenation__item pagenation__item--arrow">
-                  <a href="#" class="btn-arrow--left"> </a>
+                  <a href="MK02.html" class="btn-arrow--left"> </a>
                 </li>
                 <li class="pagenation__item is-active">1</li>
                 <li class="pagenation__item">2</li>
@@ -398,7 +398,7 @@
                 <li class="pagenation__item">···</li>
                 <li class="pagenation__item">99</li>
                 <li class="pagenation__item pagenation__item--arrow">
-                  <a href="#" class="btn-arrow--right"> </a>
+                  <a href="MK02.html" class="btn-arrow--right"> </a>
                 </li>
               </ul>
             </div>
@@ -421,34 +421,34 @@
     <div class="main-footer__info">
       <ul class="main-footer__site">
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">회사소개</a>
+          <a href="MK02.html" class="main-footer__site-link">회사소개</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">고객문의</a>
+          <a href="MK02.html" class="main-footer__site-link">고객문의</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">투자정보</a>
+          <a href="MK02.html" class="main-footer__site-link">투자정보</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">프로젝트</a>
+          <a href="MK02.html" class="main-footer__site-link">프로젝트</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">사업분야</a>
+          <a href="MK02.html" class="main-footer__site-link">사업분야</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">오시는 길</a>
+          <a href="MK02.html" class="main-footer__site-link">오시는 길</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">채용정보</a>
+          <a href="MK02.html" class="main-footer__site-link">채용정보</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">지속가능경영</a>
+          <a href="MK02.html" class="main-footer__site-link">지속가능경영</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">홍보센터</a>
+          <a href="MK02.html" class="main-footer__site-link">홍보센터</a>
         </li>
         <li class="main-footer__site-item">
-          <a href="#" class="main-footer__site-link">NEXUS™ 솔루션</a>
+          <a href="MK02.html" class="main-footer__site-link">NEXUS™ 솔루션</a>
         </li>
       </ul>
 
@@ -478,19 +478,19 @@
           </div>
         </dl>
         <div class="main-footer__sns">
-            <a href="#" class="main-footer__sns-item youtube">
+            <a href="MK02.html" class="main-footer__sns-item youtube">
               <span class="ir">youtube</span>
             </a>
-            <a href="#" class="main-footer__sns-item instagram">
+            <a href="MK02.html" class="main-footer__sns-item instagram">
               <span class="ir">instagram</span>
             </a>
         </div>
       </div>
 
       <div class="main-footer__policy">
-        <a href="#" class="main-footer__policy-link">개인정보 보호정책</a>
-        <a href="#" class="main-footer__policy-link">서비스 약관</a>
-        <a href="#" class="main-footer__policy-link">쿠키 설정</a>
+        <a href="MK02.html" class="main-footer__policy-link">개인정보 보호정책</a>
+        <a href="MK02.html" class="main-footer__policy-link">서비스 약관</a>
+        <a href="MK02.html" class="main-footer__policy-link">쿠키 설정</a>
       </div>
     </div>
   </div>
