--- a/20250810/html/main/MN01.html
+++ b/20250810/html/main/MN01.html
@@ -207,7 +207,7 @@
               <div class="swiper-slide main-swiper__slide">
                 <div class="swiper-slide__inner">
                   <div class="main-swiper__image">
-                    <img src="../../assets/img/main/img-main-swiper-feature01.webp" alt="" loading="lazy" />
+                    <img src="../../assets/img/main/img-main-swiper-feature02.webp" alt="LNG 인프라 - 파란색 산업용 파이프라인과 밸브" loading="lazy" />
                   </div>
                   <div class="main-swiper__description">
                     <div class="main-swiper__number" aria-hidden="true">02</div>
@@ -227,7 +227,7 @@
               <div class="swiper-slide main-swiper__slide">
                 <div class="swiper-slide__inner">
                   <div class="main-swiper__image">
-                    <img src="../../assets/img/main/img-main-swiper-feature01.webp" alt="" loading="lazy" />
+                    <img src="../../assets/img/main/img-main-swiper-feature03.webp" alt="LPG 인프라 - 은색 탱크 트럭이 고속도로에서 일몰을 향해 달리는 모습" loading="lazy" />
                   </div>
                   <div class="main-swiper__description">
                     <div class="main-swiper__number" aria-hidden="true">03</div>
@@ -530,84 +530,90 @@
                 <a href="#" class="main-media__link">
                   <span class="main-media__label">news</span>
                   <h3 class="main-media__title">
-                    Nexus Gas의 혁신적인<br />
-                    프로젝트
+                    안산 수소시범도시<br />
+                    공급망 구축 완료
                   </h3>
                   <p class="main-media__text">
-                    넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종), 토공면허 등을 보유하고 있으며,
-                    한국가스공사의 LNG 관로공사, 넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종),
+                    넥서스가스가 안산 수소시범도시 공급망 구축 프로젝트를 성공적으로 완료했습니다.
+                    232세대 임대주택, 체육시설, 물류센터 등에 수소 공급 시스템을 구축하여
+                    친환경 에너지 인프라의 새로운 모델을 제시했습니다.
                   </p>
-                  <span class="main-media__date">2025.05.20</span>
+                  <span class="main-media__date">2025.01.15</span>
                 </a>
               </div>
               <div class="swiper-slide main-media__card">
                 <a href="#" class="main-media__link">
                   <span class="main-media__label">YOUTUBE</span>
                   <h3 class="main-media__title">
-                    Nexus Gas의 혁신적인<br />
-                    프로젝트
+                    3D 모니터링 시스템<br />
+                    NEXUS™ 소개 영상
                   </h3>
                   <p class="main-media__text">
-                    넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종), 토공면허 등을 보유하고 있으며,
-                    한국가스공사의 LNG 관로공사, 넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종),
+                    넥서스가스의 혁신적인 3D 모니터링 시스템 NEXUS™를 소개하는 영상입니다.
+                    디지털트윈 기술을 활용한 실시간 관제 솔루션으로 설비의 심장을
+                    가상 공간에 복제하여 효율적인 운영을 가능하게 합니다.
                   </p>
-                  <span class="main-media__date">2025.05.20</span>
+                  <span class="main-media__date">2024.12.28</span>
                 </a>
               </div>
               <div class="swiper-slide main-media__card">
                 <a href="#" class="main-media__link">
                   <span class="main-media__label">Blog</span>
                   <h3 class="main-media__title">
-                    Nexus Gas의 혁신적인<br />
-                    프로젝트
+                    LNG 인프라 기술의<br />
+                    발전과 미래 전망
                   </h3>
                   <p class="main-media__text">
-                    넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종), 토공면허 등을 보유하고 있으며,
-                    한국가스공사의 LNG 관로공사, 넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종),
+                    LNG 저장 및 공급을 위한 배관, 밸브, 열교환기 등 맞춤 설계 시공 기술의
+                    최신 동향과 미래 발전 방향에 대해 다룹니다. 넥서스가스의
+                    축적된 기술 노하우를 바탕으로 한 전문적인 분석을 제공합니다.
                   </p>
-                  <span class="main-media__date">2025.05.20</span>
-                </a>
-              </div>
-              <div class="swiper-slide main-media__card">
-                <a href="#" class="main-media__link">
-                  <span class="main-media__label">YOUTUBE</span>
-                  <h3 class="main-media__title">
-                    Nexus Gas의 혁신적인<br />
-                    프로젝트
-                  </h3>
-                  <p class="main-media__text">
-                    넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종), 토공면허 등을 보유하고 있으며,
-                    한국가스공사의 LNG 관로공사, 넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종),
-                  </p>
-                  <span class="main-media__date">2025.05.20</span>
+                  <span class="main-media__date">2024.11.20</span>
                 </a>
               </div>
               <div class="swiper-slide main-media__card">
                 <a href="#" class="main-media__link">
                   <span class="main-media__label">news</span>
                   <h3 class="main-media__title">
-                    Nexus Gas의 혁신적인<br />
-                    프로젝트
+                    포스코∙SK 계열사와<br />
+                    공급설비 구축 협력
                   </h3>
                   <p class="main-media__text">
-                    넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종), 토공면허 등을 보유하고 있으며,
-                    한국가스공사의 LNG 관로공사, 넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종),
+                    넥서스가스가 포스코, SKE&S 등 주요 기업들과 LNG∙수소 설비 구축을 위한
+                    전략적 협력을 체결했습니다. 총 8km 수소배관 및 수소 추출기 설치를
+                    포함한 대규모 프로젝트를 진행합니다.
                   </p>
-                  <span class="main-media__date">2025.05.20</span>
+                  <span class="main-media__date">2024.10.05</span>
                 </a>
               </div>
               <div class="swiper-slide main-media__card">
                 <a href="#" class="main-media__link">
                   <span class="main-media__label">YOUTUBE</span>
                   <h3 class="main-media__title">
-                    Nexus Gas의 혁신적인<br />
-                    프로젝트
+                    LPG 인프라 시공<br />
+                    현장 투어 영상
                   </h3>
                   <p class="main-media__text">
-                    넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종), 토공면허 등을 보유하고 있으며,
-                    한국가스공사의 LNG 관로공사, 넥서스가스는 2013년 12월 설립되어 가스시설시공업(제1종),
+                    산업용부터 상업용까지 책임지는 LPG 설비 기술의 현장을 직접 확인할 수 있는
+                    투어 영상입니다. 넥서스가스의 전문적인 시공 과정과
+                    안전 관리 시스템을 생생하게 보여줍니다.
                   </p>
-                  <span class="main-media__date">2025.05.20</span>
+                  <span class="main-media__date">2024.09.18</span>
+                </a>
+              </div>
+              <div class="swiper-slide main-media__card">
+                <a href="#" class="main-media__link">
+                  <span class="main-media__label">Blog</span>
+                  <h3 class="main-media__title">
+                    ESG 경영 실천을 위한<br />
+                    친환경 기술 도입
+                  </h3>
+                  <p class="main-media__text">
+                    넥서스가스의 ESG 경영 실천 노력과 친환경 기술 도입 사례를 소개합니다.
+                    친환경 소재 활용, 산업안전∙보건 강화 등 지속가능한
+                    미래를 위한 다양한 노력을 확인할 수 있습니다.
+                  </p>
+                  <span class="main-media__date">2024.08.30</span>
                 </a>
               </div>
             </div>
