--- a/20250810/html/sub/MK11.html
+++ b/20250810/html/sub/MK11.html
@@ -163,7 +163,7 @@
               </div>
             </div>
             <div class="info-card-wrap__item info-card-wrap__item--data">
-              <button type="button" class="info-cards">
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -172,8 +172,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">자료 컨텐츠 타이틀</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -182,8 +182,8 @@
                     <span class="btn__name">첨부파일 다운로드</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">자료 컨텐츠 타이틀 자료 컨텐츠 타이틀 자료 컨텐츠...asdas</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -192,8 +192,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">2025년 1분기 경영실적</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -202,8 +202,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -212,8 +212,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -222,8 +222,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -232,8 +232,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -242,8 +242,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -252,8 +252,8 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
-              <button type="button" class="info-cards">
+              </a>
+              <a href="MK12.html" class="info-cards">
                 <div class="info-cards__title">지속 가능한 미래를 위한 에너지 혁신의 길</div>
                 <div class="info-cards__info">
                   <div class="info-cards__date">2025.05.20</div>
@@ -262,7 +262,7 @@
                     <span class="btn__name">2025년 1분기 실적발표.pdf</span>
                   </div>
                 </div>
-              </button>
+              </a>
             </div>
             <div class="pagenation__wrap">
               <ul class="pagenation__item">
