20250812 퍼블 수정: 팝업 기능 추가 및 SU03 페이지 개선

--- a/20250812/html/sub/SU03.html
+++ b/20250812/html/sub/SU03.html
@@ -117,7 +117,7 @@
           <div class="hero-container__enlarge">
             <div
               class="hero-container__bg"
-              style="background-image: url(../../assets/img/sub/hero-type-bg-su01.webp)"
+              style="background-image: url(../../assets/img/sub/hero-type-bg-su03.webp)"
             ></div>
             <div class="sub-hero__dimmed"></div>
             <div class="sub-hero__sections">
@@ -149,69 +149,69 @@
         <div class="square-section__inner">
           <h3 class="square-section__title">임직원 윤리강령</h3>
           <div class="square-wrap">
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon01.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon02.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon03.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon04.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon05.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon06.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
-            <div class="square">
-              <div class="square__icon"><img src="../../assets/img/sub/su03-icon07.webp" alt="" /></div>
-              <h4 class="square__title">정직과 신뢰</h4>
-              <div class="square__desc">
-                모든 업무는 투명하고 정직하게 <br />
-                처리하며, 개인의 이익보다 회사와 <br />
-                사회의 공동 이익을 우선합니다.
-              </div>
-            </div>
+                         <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon01.webp" alt="" /></div>
+               <h4 class="square__title">정직과 신뢰</h4>
+               <div class="square__desc">
+                 모든 업무는 투명하고 정직하게 <br />
+                 처리하며, 개인의 이익보다 회사와 <br />
+                 사회의 공동 이익을 우선합니다.
+               </div>
+             </div>
+             <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon02.webp" alt="" /></div>
+               <h4 class="square__title">법령 및 규정 준수</h4>
+               <div class="square__desc">
+                 국내외 관련 법규와 사내 규정을 <br />
+                 철저히 준수하고, 위반 사항에 대해 <br />
+                 적극적으로 보고·조치합니다.
+               </div>
+             </div>
+             <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon03.webp" alt="" /></div>
+               <h4 class="square__title">고객에 대한 책임</h4>
+               <div class="square__desc">
+                 고객의 정보는 철저히 보호하며, <br />
+                 진정성 있는 태도와 전문성을 바탕으로 <br />
+                 신뢰를 구축합니다.
+               </div>
+             </div>
+             <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon04.webp" alt="" /></div>
+               <h4 class="square__title">사내 공정문화 확립</h4>
+               <div class="square__desc">
+                 채용, 평가, 승진 등 모든 인사 제도는 <br />
+                 공정하고 투명하게 운영되며, 어떠한 <br />
+                 형태의 차별이나 부당행위도 용납하지 않습니다.
+               </div>
+             </div>
+             <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon05.webp" alt="" /></div>
+               <h4 class="square__title">부패 및 금품수수 금지</h4>
+               <div class="square__desc">
+                 금전, 향응, 선물 등 부적절한 이익 <br />
+                 제공 또는 수수는 일체 금지하며, <br />
+                 위반 시 관련 규정에 따라 엄정 대응합니다.
+               </div>
+             </div>
+             <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon06.webp" alt="" /></div>
+               <h4 class="square__title">이해상충 방지</h4>
+               <div class="square__desc">
+                 직무와 관련된 외부 이해관계나 사적 <br />
+                 활동은 공정한 업무 수행에 영향을 <br />
+                 주지 않도록 사전에 보고하고 회피합니다.
+               </div>
+             </div>
+             <div class="square">
+               <div class="square__icon"><img src="../../assets/img/sub/su03-icon07.webp" alt="" /></div>
+               <h4 class="square__title">기업 자산 및 정보 보호</h4>
+               <div class="square__desc">
+                 사내 정보, 자산, 지식재산권 등은 <br />
+                 회사의 중요한 자산으로, 외부 유출 및 <br />
+                 부정 사용을 엄격히 금지합니다.
+               </div>
+             </div>
             <div class="square empty">
               <img src="../../assets/img/sub/nexusgas-empty-center.webp" alt="" />
             </div>
